--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,7 +32,12 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/eleve/*, roles: ROLE_USER }
+        - { path: ^/index$, roles: ROLE_USER }
+        - { path: ^/note$, roles: ROLE_USER }
+        - { path: ^/forgotpassword$, roles: ROLE_USER }
+        - { path: ^/mark$, roles: ROLE_USER }
+        - { path: ^/post$, roles: ROLE_USER }
 
 when@test:
     security:
