--- a/.env
+++ b/.env
@@ -42,3 +42,13 @@ DATABASE_URL="mysql://root:password@mysql-symfony:3306/symfony?serverVersion=8&c
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=3228a09e9c46023381f6f6f378cf823e
+###< lexik/jwt-authentication-bundle ###
